# FinopsAssist

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  GO Report Extract LIGHT_V2.BACKUP.xlsx  GO Report Extract LIGHT_V2.xlsx  GO_predictions.xlsx  README.md  confusion_families.csv  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
docs/: frontend-integration.md
src/: agent.py  agent_tools.py  app.py  benchmark.py  benchmark_v5.py  main.py  matcher.py  review.py  run_pipeline.py
src/backend/: agent.py  agent_tools.py  api.py  aws_accounts.py  data_source.py  learning_store.py  main.py  matcher.py  review.py  service.py
src/frontend/: api_client.py  app.py
