[project]
name = "finops-agent"
version = "0.1.0"
description = "FinOps recharging item matcher — hybrid embeddings + fuzzy matching"
requires-python = ">=3.11"
dependencies = [
    "langchain-aws>=0.2",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "scikit-learn>=1.5",
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
