[project]
name = "finops-agent"
version = "0.1.0"
description = "FinOps recharging item matcher — exact lookup + char n-gram logistic-regression classifier"
requires-python = ">=3.11"
# No hard base deps — install the half(s) you run via the extras below.
# Local dev (both):   pip install -e ".[backend,frontend,dev]"
dependencies = []

[project.optional-dependencies]
# Backend (src/backend): the ML engine + LLM agent + FastAPI service.
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "langchain-aws>=0.2",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "databricks-sql-connector>=4.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]
# Frontend (src/frontend): the Streamlit thin client — talks to the backend over HTTP.
frontend = [
    "streamlit>=1.40",
    "httpx>=0.27",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Entry-point scripts prepend "src" to sys.path before importing sibling modules,
# so imports intentionally follow that statement (E402).
ignore = ["E402"]
